colcon_ws/log/build_2022-09-10_23-28-49/gatekeeper/stderr.log
In file included from /root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:10:
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:26:28: error: ‘PointCloud2’ in namespace ‘pcl’ does not name a template type; did you mean ‘PointCloud’?
   26 | using PCLPointCloud = pcl::PointCloud2<PCLPoint>;
      |                            ^~~~~~~~~~~
      |                            PointCloud
/root/colcon_ws/src/gatekeeper/include/gatekeeper/gatekeeper.hpp:69:15: error: ‘PCLPointCloud’ does not name a type; did you mean ‘PCLPoint’?
   69 |         const PCLPointCloud& pc);
      |               ^~~~~~~~~~~~~
      |               PCLPoint
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::cloud_callback(sensor_msgs::msg::PointCloud2_<std::allocator<void> >::SharedPtr)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:53:3: error: ‘PCLPointCloud’ was not declared in this scope; did you mean ‘PCLPoint’?
   53 |   PCLPointCloud pc;
      |   ^~~~~~~~~~~~~
      |   PCLPoint
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:54:25: error: ‘pc’ was not declared in this scope; did you mean ‘ph’?
   54 |   pcl::fromROSMsg(*msg, pc);
      |                         ^~
      |                         ph
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:92:16: error: expected ‘;’ before ‘filtered’
   92 |   PCLPointCloud filtered;
      |                ^~~~~~~~~
      |                ;
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:95:7: error: ‘filtered’ was not declared in this scope
   95 |       filtered.push_back(point);
      |       ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:23: error: ‘PointCloud2’ is not a member of ‘pcl’; did you mean ‘PointCloud’?
  100 |   pcl::VoxelGrid<pcl::PointCloud2> vox;
      |                       ^~~~~~~~~~~
      |                       PointCloud
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:23: error: ‘PointCloud2’ is not a member of ‘pcl’; did you mean ‘PointCloud’?
  100 |   pcl::VoxelGrid<pcl::PointCloud2> vox;
      |                       ^~~~~~~~~~~
      |                       PointCloud
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:100:34: error: template argument 1 is invalid
  100 |   pcl::VoxelGrid<pcl::PointCloud2> vox;
      |                                  ^
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:101:7: error: request for member ‘setInputCloud’ in ‘vox’, which is of non-class type ‘int’
  101 |   vox.setInputCloud(filtered.makeShared());
      |       ^~~~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:101:21: error: ‘filtered’ was not declared in this scope
  101 |   vox.setInputCloud(filtered.makeShared());
      |                     ^~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:102:7: error: request for member ‘setLeafSize’ in ‘vox’, which is of non-class type ‘int’
  102 |   vox.setLeafSize(0.05, 0.05, 0.05);
      |       ^~~~~~~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:103:7: error: request for member ‘filter’ in ‘vox’, which is of non-class type ‘int’
  103 |   vox.filter(filtered);
      |       ^~~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: At global scope:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:117:9: error: ‘PCLPointCloud’ does not name a type; did you mean ‘PCLPoint’?
  117 |   const PCLPointCloud& pc)
      |         ^~~~~~~~~~~~~
      |         PCLPoint
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp: In member function ‘void gatekeeper::Gatekeeper::insertScan(const Vector3&, const int&)’:
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:124:25: error: request for member ‘size’ in ‘pc’, which is of non-class type ‘const int’
  124 |   octomap_pc.reserve(pc.size());
      |                         ^~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:126:21: error: request for member ‘begin’ in ‘pc’, which is of non-class type ‘const int’
  126 |   for (auto it = pc.begin(); it != pc.end(); ++it){
      |                     ^~~~~
/root/colcon_ws/src/gatekeeper/src/gatekeeper.cpp:126:39: error: request for member ‘end’ in ‘pc’, which is of non-class type ‘const int’
  126 |   for (auto it = pc.begin(); it != pc.end(); ++it){
      |                                       ^~~
make[2]: *** [CMakeFiles/gatekeeper.dir/build.make:63: CMakeFiles/gatekeeper.dir/src/gatekeeper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/gatekeeper.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
